examples/test/testpolicy10167.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10167
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key14: value25
      key19: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value38
          key20: value19
      podSelector:
        matchLabels:
          key1: value12
